--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -1,4 +1,4 @@
-name: Daily flight email
+name: Flight Watchlist Scraper
 
 on:
   schedule:
@@ -18,42 +18,18 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Install
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install .
+          pip install -r requirements.txt
+          playwright install --with-deps chromium
 
-      - name: Run
+      - name: Run bot
         env:
-          RAPIDAPI_KEY: ${{ secrets.RAPIDAPI_KEY }}
-          RAPIDAPI_HOST: "flights-scraper-real-time.p.rapidapi.com"
-          BASE_URL: "https://flights-scraper-real-time.p.rapidapi.com"
-
           SMTP_HOST: ${{ secrets.SMTP_HOST }}
           SMTP_PORT: ${{ secrets.SMTP_PORT }}
           SMTP_USER: ${{ secrets.SMTP_USER }}
           SMTP_PASS: ${{ secrets.SMTP_PASS }}
           EMAIL_TO: ${{ secrets.EMAIL_TO }}
-
-          ORIGINS: "AMS,RTM"
-          DESTINATION: "BCN"
-          WEEKS: "3"
-          TOP_N: "10"
-          STOPS: "0"
-
-          # Outbound strict: must DEPART 16-23
-          OUT_TIME_FROM: "16:00"
-          OUT_TIME_TO: "23:00"
-          OUT_TIME_MODE: "DEPART"
-
-          # Inbound fast-fix: accept if DEPART OR ARRIVE within window (with a small buffer)
-          IN_TIME_FROM: "15:00"
-          IN_TIME_TO: "23:00"
-          IN_TIME_MODE: "EITHER"
-
-          TZ: "Europe/Madrid"
-          REFRESH_EVERY_DAYS: "6"
-          EMAIL_SUBJECT: "AMS/RTM - BCN"
-
         run: |
           python -m src.main
