--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -5,6 +5,9 @@ on:
     - cron: "15 5 * * *"
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   run:
     runs-on: ubuntu-latest
@@ -31,5 +34,31 @@ jobs:
           SMTP_USER: ${{ secrets.SMTP_USER }}
           SMTP_PASS: ${{ secrets.SMTP_PASS }}
           EMAIL_TO: ${{ secrets.EMAIL_TO }}
+          EMAIL_SUBJECT: "AMS/RTM - BCN"
+          TZ: "Europe/Madrid"
+          TIME_FROM: "16:00"
+          TIME_TO: "23:00"
+          WEEKS: "3"
         run: |
           python -m src.main
+
+      - name: Upload debug artifacts
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: debug-artifacts
+          path: debug/
+          if-no-files-found: ignore
+
+      - name: Commit updated history
+        if: always()
+        run: |
+          if [ -n "$(git status --porcelain data/price_history.json 2>/dev/null)" ]; then
+            git config user.name "github-actions"
+            git config user.email "github-actions@github.com"
+            git add data/price_history.json
+            git commit -m "Update price history"
+            git push
+          else
+            echo "No history changes to commit."
+          fi
